<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <LinearLayout
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/erp"
                />

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16ssp"
                android:text="@string/create_account"
                android:textColor="@android:color/black"

                />

            <EditText
                android:layout_marginTop="@dimen/_30sdp"
                android:padding="@dimen/_8sdp"
                android:id="@+id/etc_email"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:maxLength="30"
                />
            <TextView
                android:visibility="gone"
                android:id="@+id/tvc_email"
                android:paddingStart="@dimen/_5sdp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:text="@string/error_email"
                android:textColor="@android:color/holo_red_light"
                />



            <EditText
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_8sdp"
                android:id="@+id/etc_phone"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="16"
                android:singleLine="true"
                />
            <TextView
                android:visibility="gone"
                android:id="@+id/tvc_phone"
                android:paddingStart="@dimen/_5sdp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:text="@string/error_phone"
                android:textColor="@android:color/holo_red_light"
                />
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:orientation="horizontal">
            <EditText
                android:padding="@dimen/_8sdp"
                android:id="@+id/etc_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:hint="@string/password"
                android:singleLine="true"
                android:inputType="textPassword"
                android:maxLength="20"
                android:layout_weight="1"
                />
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/eye2"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/eye"
                android:paddingEnd="@dimen/_5sdp"
                android:background="@drawable/effect"
                />
        </LinearLayout>
            <TextView
                android:visibility="gone"
                android:id="@+id/tvc_password"
                android:paddingStart="@dimen/_5sdp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:text="@string/error_password"
                android:textColor="@android:color/holo_red_light"
                />
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:orientation="horizontal">

            <EditText
                android:padding="@dimen/_8sdp"
                android:id="@+id/etc_cnfpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:maxLength="20"
                android:layout_weight="1"
                />

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/eye3"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/eye"
                android:paddingEnd="@dimen/_5sdp"
                android:background="@drawable/effect"
                />

        </LinearLayout>
            <TextView
                android:visibility="gone"
                android:id="@+id/tvc_cnfpassword"
                android:paddingStart="@dimen/_5sdp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:text="@string/error_cnf"
                android:textColor="@android:color/holo_red_light"
                />

            <Button
                android:onClick="create_account"
                android:id="@+id/btn_create"
                android:background="@drawable/btn_login_bg"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/create"
                />
            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_account"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:paddingStart="@dimen/_3sdp"
                    android:paddingEnd="@dimen/_3sdp"
                    android:onClick="signIn"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/holo_green_dark"
                    android:background="@drawable/effect"
                    />

            </LinearLayout>

            <ProgressBar
                android:visibility="gone"
                android:layout_marginTop="@dimen/_5sdp"
                android:id="@+id/sign_progressbar"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>