<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    <LinearLayout
        android:paddingBottom="@dimen/_10sdp"
        android:paddingTop="@dimen/_20sdp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/erp"
            />

        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16ssp"
            android:text="@string/login"
            android:textColor="@android:color/black"

            />

        <EditText
            android:layout_marginTop="@dimen/_30sdp"
            android:padding="@dimen/_8sdp"
            android:id="@+id/et_email"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:singleLine="true"
            />
        <TextView
            android:visibility="gone"
            android:id="@+id/tv_email"
            android:paddingStart="@dimen/_5sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:text="@string/error_email"
            android:textColor="@android:color/holo_red_light"
            />
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:orientation="horizontal">
        <EditText
            android:background="@drawable/et_bg"
            android:padding="@dimen/_8sdp"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:singleLine="true"
            android:maxLength="20"
            android:inputType="textPassword"
            android:layout_weight="1"
            />
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/eye"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/eye"
                android:paddingEnd="@dimen/_5sdp"
                android:background="@drawable/effect"
                />
        </LinearLayout>
        <TextView
            android:visibility="gone"
            android:id="@+id/tv_password"
            android:paddingStart="@dimen/_5sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:text="@string/error_password"
            android:textColor="@android:color/holo_red_light"
            />

        <Button
            android:onClick="login"
            android:id="@+id/btn_login"
            android:background="@drawable/btn_login_bg"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/btn_login"
            />
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont"
            android:textSize="@dimen/_12ssp"
            android:textColor="@android:color/black"
            />
            <TextView
                android:paddingStart="@dimen/_3sdp"
                android:paddingEnd="@dimen/_3sdp"
                android:onClick="signUp"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@android:color/holo_green_dark"
                android:background="@drawable/effect"
                />

        </LinearLayout>

        <ProgressBar
            android:visibility="gone"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/login_progressbar"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            />


    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>