<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProduct">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:textSize="@dimen/_20ssp"
            android:textColor="@android:color/holo_blue_dark"
            />

        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="right"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:text="@string/product_id"
                android:textSize="@dimen/_16ssp"
                android:textColor="@android:color/black"
                />
            <EditText
                android:paddingStart="@dimen/_10sdp"
                android:id="@+id/p_product_id"
                android:layout_marginStart="@dimen/_3sdp"
                android:padding="@dimen/_3sdp"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_black"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="6"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:paddingEnd="@dimen/_5sdp"
                android:gravity="right"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textSize="@dimen/_16ssp"
                android:textColor="@android:color/black"
                />
            <EditText
                android:paddingStart="@dimen/_10sdp"
                android:id="@+id/p_product_name"
                android:padding="@dimen/_3sdp"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_black"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:maxLength="20"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="right"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="@dimen/_16ssp"
                android:textColor="@android:color/black"
                />
            <EditText
                android:paddingStart="@dimen/_10sdp"
                android:id="@+id/p_category"
                android:layout_marginStart="@dimen/_3sdp"
                android:padding="@dimen/_3sdp"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_black"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:maxLength="20"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="right"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textSize="@dimen/_16ssp"
                android:textColor="@android:color/black"
                />
            <EditText
                android:paddingStart="@dimen/_10sdp"
                android:id="@+id/p_quantity"
                android:layout_marginStart="@dimen/_3sdp"
                android:padding="@dimen/_3sdp"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_black"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="5"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="right"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="@dimen/_16ssp"
                android:textColor="@android:color/black"
                />
            <EditText
                android:paddingStart="@dimen/_10sdp"
                android:id="@+id/p_amount"
                android:layout_marginStart="@dimen/_3sdp"
                android:padding="@dimen/_3sdp"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_black"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="10"
                />
        </LinearLayout>
        <Button
            android:id="@+id/p_submit"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_bg"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            />
    </LinearLayout>
    </ScrollView>
</FrameLayout>