<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SalesPrediction">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sales_prediction"
        android:textSize="@dimen/_20ssp"
        android:textColor="@android:color/holo_blue_dark"
        />
    <LinearLayout
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:gravity="right"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="@dimen/_16ssp"
            android:textColor="@android:color/black"
            />
        <LinearLayout
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/et_black"

            >
            <Spinner
                android:id="@+id/sp_category"
                android:padding="@dimen/_3sdp"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_25sdp"
                android:dropDownSelector="@android:color/black"
                android:gravity="center"

                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:gravity="right"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="@dimen/_16ssp"
            android:textColor="@android:color/black"
            />
        <LinearLayout
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/et_black"
            >
            <Spinner
                android:id="@+id/sp_product_name"
                android:padding="@dimen/_3sdp"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_25sdp"
                android:gravity="center"

                />

        </LinearLayout>
    </LinearLayout>

        <Button
            android:id="@+id/sp_submit"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_bg"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

    </ScrollView>
</FrameLayout>